results/SVCOMP/specgen/log-OverapproximationString01-2024_02_28_21_10_52.txt
public class OverapproximationString01 {
    //@ requires s != null;
    //@ ensures complete.equals("not possible") ==> \result;
    //@ ensures !complete.equals("not possible") ==> !\result;
    public static void foo(String s) {
        String prefix = "abc";
        String complete = prefix + s;
        if (complete.equals("not possible")) {
            assert (true);
        } else {
            assert (false);
        }
    }
}
/home/max/Documents/JMLGPT/tmp/OverapproximationString01.java:3: error: cannot find symbol
    //@ ensures complete.equals("not possible") ==> \result;
                ^
  symbol:   variable complete
  location: class OverapproximationString01
/home/max/Documents/JMLGPT/tmp/OverapproximationString01.java:3: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures complete.equals("not possible") ==> \result;
                                                     ^
/home/max/Documents/JMLGPT/tmp/OverapproximationString01.java:4: error: cannot find symbol
    //@ ensures !complete.equals("not possible") ==> !\result;
                 ^
  symbol:   variable complete
  location: class OverapproximationString01
/home/max/Documents/JMLGPT/tmp/OverapproximationString01.java:4: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures !complete.equals("not possible") ==> !\result;
                                                       ^
4 errors

public class OverapproximationString01 {
    //@ requires s != null;
    //@ ensures complete.equals("not possible") ==> true;
    //@ ensures !complete.equals("not possible") ==> false;
    public static void foo(String s) {
        String prefix = "abc";
        String complete = prefix + s;
        if (complete.equals("not possible")) {
            assert (true);
        } else {
            assert (false);
        }
    }
}
/home/max/Documents/JMLGPT/tmp/OverapproximationString01.java:3: error: cannot find symbol
    //@ ensures complete.equals("not possible") ==> true;
                ^
  symbol:   variable complete
  location: class OverapproximationString01
/home/max/Documents/JMLGPT/tmp/OverapproximationString01.java:4: error: cannot find symbol
    //@ ensures !complete.equals("not possible") ==> false;
                 ^
  symbol:   variable complete
  location: class OverapproximationString01
2 errors

public class OverapproximationString01 {
    //@ requires s != null;
    //@ ensures true; // Placeholder for the postcondition
    public static void foo(String s) {
        String prefix = "abc";
        String complete = prefix + s;
        if (complete.equals("not possible")) {
            assert (true);
        } else {
            assert (false);
        }
    }
}
